# magic_top_hat

./: LICENSE  README.md  pyproject.toml
scripts/: example.py
src/magic_top_hat/: __init__.py
src/margareth_catcher/: __init__.py  catcher.py
